# SignatureGenerator

./: CMakeLists.txt  README.md
Documentation/: Architecture.md
SignatureGenerator/: CMakeLists.txt  main.cpp
SignatureGenerator/details/: Application.cpp  Application.h
cmake/: config.cmake
libSignatureGenerator/: CMakeLists.txt  Library.cpp  Library.h
libSignatureGenerator/Components/InputDataLayer/: InputDataProvider.cpp  InputDataProvider.h
libSignatureGenerator/Components/InputDataLayer/details/: InDataChunk.h  InDataChunkImpl.cpp  InDataChunkImpl.h  InDataListener.h
libSignatureGenerator/Components/OutputDataLayer/: OutputDataConsumer.cpp  OutputDataConsumer.h
libSignatureGenerator/Components/ProcessingLayer/: SignatureGenerator.cpp  SignatureGenerator.h
libSignatureGenerator/Components/ProcessingLayer/details/: ChunkSignature.h  ChunkSignatureImpl.cpp  ChunkSignatureImpl.h  DataAvailableListener.h
libSignatureGenerator/Components/Utilities/: CommonTypes.h  MessageQueue.cpp  MessageQueue.h
libSignatureGenerator/Details/InputDataLayer/: InputDataProvider.cpp  InputDataProvider.h
libSignatureGenerator/Details/OutputDataLayer/: OutputDataConsumer.cpp  OutputDataConsumer.h
libSignatureGenerator/Details/ProcessingLayer/: SignatureGenerator.cpp  SignatureGenerator.h
libSignatureGenerator/Details/Utilities/: CommonTypes.h  MessageQueue.cpp  MessageQueue.h
tests/: CMakeLists.txt  libSignatureGeneratorTest.cpp
